--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -1,4 +1,16 @@
 #chat-app {
-  padding: 30px;
-  color: #ffffff;
+  height: 768px;
+  width: 1480px;
+  max-width: 1480px;
+  padding: 0 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: minmax(100px, 380px) repeat(4, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  gap: 25px;
+
+  color: var(--color-text-primary);
 }
