--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,26 +1,24 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900&display=swap");
 
 #login-chat {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #131419;
+  background: var(--color-primary);
 }
 
 .form {
   position: relative;
   width: 350px;
   padding: 40px 40px 60px;
-  background: #131419;
+  background: var(--color-primary);
   border-radius: 10px;
   text-align: center;
-  box-shadow: -5px -5px 10px rgba(255,255,255,0.05),
-              5px 5px 15px rgba(0,0,0,0.5);
+  box-shadow: var(--box-shadow);
 }
 
 .form h2 {
-  color: #c7c7c7;
+  color: var(--color-text-primary);
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -37,7 +35,7 @@
 
 .form .input .inputBox label {
   display: block;
-  color: #868686;
+  color: var(--color-text-secondary);
   margin-bottom: 5px;
   font-size: 18px;
 }
@@ -45,41 +43,40 @@
 .form .input .inputBox input {
   width: 100%;
   height: 50px;
-  background: #131419;
-  border: none;
-  outline: none;
+  background: var(--color-primary);
   border-radius: 40px;
   padding: 5px 15px;
-  color: #fff;
   font-size: 18px;
-  color: #03a9f4;
-  box-shadow: inset -2px -2px 6px rgba(255,255,255,0.1),
-              inset 2px 2px 6px rgba(0,0,0,0.8);
+  color: var(--color-text-purple);
+  box-shadow: var(--box-shadow-inset);
 }
 
 .form .input .inputBox input[type="submit"] {
   margin-top: 20px;
-  box-shadow: -2px -2px 6px rgba(255,255,255,0.1),
-              2px 2px 6px rgba(0,0,0,0.8);
+  box-shadow: var(--box-shadow);
+}
+.form .input .inputBox input[type="submit"]:hover {
+  cursor: pointer;
 }
 
 .form .input .inputBox input[type="submit"]:active {
-  color: #006c9c;
+  color: var(--color-text-purple-active);
   margin-top: 20px;
-  box-shadow: inset -2px -2px 6px rgba(255,255,255,0.1),
-              inset 2px 2px 6px rgba(0,0,0,0.8);
+  box-shadow: 
+    var(--box-shadow),
+    var(--box-shadow-inset);
 }
 
 .form .input .inputBox input::placeholder {
-  color: #555;
+  color: var(--color-placeholder);
   font-size: 18px;
 }
 
 .forget {
   margin-top: 30px;
-  color: #555;
+  color: var(--color-placeholder);
 }
 
 .forget a {
-  color: #ff0047
+  color: #bf0036;
 }
