--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -7,9 +7,9 @@
   background: var(--color-primary);
 }
 
-.form {
+.login {
   position: relative;
-  width: 350px;
+  max-width: 350px;
   padding: 40px 40px 60px;
   background: var(--color-primary);
   border-radius: 10px;
@@ -17,30 +17,30 @@
   box-shadow: var(--box-shadow);
 }
 
-.form h2 {
+.login__title {
   color: var(--color-text-primary);
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 4px;
 }
 
-.form .input {
+.login__input {
   text-align: left;
   margin-top: 40px;
 }
 
-.form .input .inputBox {
+.input__box {
   margin-top: 20px;
 }
 
-.form .input .inputBox label {
+.input__box label {
   display: block;
   color: var(--color-text-secondary);
   margin-bottom: 5px;
   font-size: 18px;
 }
 
-.form .input .inputBox input {
+.input__box input {
   width: 100%;
   height: 50px;
   background: var(--color-primary);
@@ -51,15 +51,15 @@
   box-shadow: var(--box-shadow-inset);
 }
 
-.form .input .inputBox input[type="submit"] {
+.input__box input[type="submit"] {
   margin-top: 20px;
   box-shadow: var(--box-shadow);
 }
-.form .input .inputBox input[type="submit"]:hover {
+.input__box input[type="submit"]:hover {
   cursor: pointer;
 }
 
-.form .input .inputBox input[type="submit"]:active {
+.input__box input[type="submit"]:active {
   color: var(--color-text-purple-active);
   margin-top: 20px;
   box-shadow: 
@@ -67,7 +67,7 @@
     var(--box-shadow-inset);
 }
 
-.form .input .inputBox input::placeholder {
+.input__box input::placeholder {
   color: var(--color-placeholder);
   font-size: 18px;
 }
@@ -75,8 +75,16 @@
 .forget {
   margin-top: 30px;
   color: var(--color-placeholder);
+  display: flex;
+  justify-content: space-between;
 }
 
 .forget a {
   color: #bf0036;
+}
+
+@media only screen and (max-width: 312px) {
+  .forget {
+    flex-direction: column;
+  }
 }
