--- a/client/src/styles/chat/Box.css
+++ b/client/src/styles/chat/Box.css
@@ -1,185 +1,175 @@
-
 #chat-box {
-  grid-column: 2 / 7;
-  grid-row: 2 / 9;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
-
-  padding: 30px;
-
-  border-radius: 10px;
-  box-shadow: var(--box-shadow)
 }
 
-/* ====== Estilos para el encabezado del chat */
+/* ====== Header of the chatbox */
 .box__header {
-  width: 94.5%;
+  padding: 15px 0;
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  position: absolute;
-  z-index: 10;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
 }
 
 .header__chat {
-  padding: 10px;
-  width: 40%;
-  border-radius: 30px;
   display: flex;
+  justify-content: center;
   align-items: center;
-  box-shadow: var(--box-shadow);
+  flex-grow: 1;
 }
-.chat-icon {
-  display: inline-block;
-  margin-right: 15px;
-  font-size: 40px;
+.chat__icon {
+  font-size: 1.75rem;
+  margin-right: 12px;
 }
-.chat-title {
+.chat__title {
   text-transform: uppercase;
-  font-weight: 400;
-  letter-spacing: 1.5px;
-  display: inline-block
+  letter-spacing: 4px;
 }
 
-.header__user {
-  width: 40%;
+.header__back {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 30px;
-  box-shadow: var(--box-shadow);
+  background: transparent;
+  color: var(--color-text-purple);
 }
-.user-data {
-  display: flex;
-  align-items: center;
-}
-.user-image {
-  margin-right: 10px;
-  border-radius: 30px;
-  box-shadow: var(--box-shadow);
-  height: 100px;
-  width: 100px;
-  object-fit: cover;
+.back__icon {
+  font-size: 2rem;
+  margin-left: 12px;
 }
 
-/* ====== Estilos para el chat */
-
-.box__message {
-  height: 70%;
-  margin: 12% 0 0 0;
-  padding: 0 25px;
-  overflow: hidden;
-  overflow-y: auto;
-  border-radius: 10px;
-  box-shadow: var(--box-shadow-inset);
-}
-
-.messages {
+/* ====== Messages of the chatbox */
+.box__messages {
+  padding: 50px 20px;
   height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-y: auto;
+}
+.messages {
+  height: auto;
   display: flex;
   flex-direction: column-reverse;
+  align-items: flex-start;
+}
+
+.no-messages {
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translateX(-50%);
+  opacity: .3;
+  letter-spacing: 2px;
+  user-select: none;
+}
+
+.message__left {
+  margin-bottom: 80px;
+  max-width: 80%;
+  position: relative;
+}
+.left__name {
+  padding: 5px 6px;
+  position: absolute;
+  top: 0;
+  transform: translateY(-100%);
+  text-transform: uppercase;
+  font-size: .8rem;
+  opacity: .6;
+  color: var(--color-text-purple);
+}
+.left__message {
+  padding: 10px 20px;
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
+  word-wrap: break-word;
+}
+.left__time {
+  padding: 10px 6px;
+  position: absolute;
+  bottom: 0;
+  transform: translateY(100%);
+  opacity: .3;
+  font-size: 14px;
 }
 
 .message__right {
   align-self: flex-end;
+  margin-bottom: 60px;
+  max-width: 80%;
   position: relative;
-  margin: 24px 15px 24px 10px; 
-  padding: 15px 25px;
-  max-width: 70%;
-  border-radius: 26px 14px 14px 26px;
-  box-shadow: var(--box-shadow);
 }
-.message__right span {
-  opacity: .3;
-  position: absolute;
-  right: 0;
-  bottom: -25px;
-}
-
-.message__left {
-  align-self: flex-start;
-  position: relative;
-  margin: 38px 10px; 
-  padding: 15px 25px;
-  max-width: 70%;
-  border-radius: 14px 26px 26px 14px;
-  box-shadow: var(--box-shadow-inset);
-  background: var(--color-text-purple-active);
-}
-.message__left span:first-child {
-  width: 200px;
-  opacity: .3;
-  position: absolute;
-  left: 0;
-  top: -30px;
-}
-.message__left span:last-child {
-  opacity: .3;
-  position: absolute;
-  left: 0;
-  bottom: -25px;
-}
-
-.message__left p,
-.message__right p {
-  white-space: normal;
-  word-break: break-word;
-} 
-
-.no-messages {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.no-messages h4 {
-  font-size: 1.2rem;
-  font-weight: 500;
-  color: var(--color-placeholder);
-}
-
-/* ====== Estilos para el formulario de envío */
-
-.box__form {
-  width: 100%;
-}
-
-.form__message input[type="text"] {
-  width: 40%;
+.right__message {
   padding: 10px 20px;
-  font-size: 1.2rem;
-  position: absolute;
-  bottom: 25px;
-  left: 44%;
-  transform: translateX(-50%);
-  border-radius: 40px;
-  color: var(--color-text-purple);
-  background-color: var(--color-primary);
   box-shadow: var(--box-shadow-inset);
+  background-color: var(--color-text-purple-active);
+  border-radius: var(--border-radius);
+  word-wrap: break-word;
+}
+.right__time {
+  padding: 10px 6px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transform: translateY(100%);
+  opacity: .3;
+  font-size: 14px;
 }
 
-.form__message button {
-  height: 50px;
-  width: 50px;
-  padding: 10px 5px 10px 10px;
+/* ====== Input of the chatbox */
+.box__input {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 65px;
+  color: var(--color-text-purple);
+}
+
+.input__form {
+  padding: 8px;
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;
+  background: var(--color-primary);
+  /* box-shadow: var(--box-shadow); */
+}
+
+.form__message {
+  width: 80%;
+  color: var(--color-text-purple);
+  background: var(--color-primary);
+  padding: 10px 20px;
+  box-shadow: var(--box-shadow-inset);
+  border-radius: 30px;
+}
+.form__message::placeholder {
+  letter-spacing: 1px;
+}
+
+.form__send {
+  margin: 2px;
+  color: var(--color-text-purple);
+  background: var(--color-primary);
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 25px;
-  left: 65%;
-  border-radius: 50%;
-  background-color: var(--color-primary);
-  box-shadow: var(--box-shadow);
-  color: rgb(128, 255, 213);
+  border-radius: var(--border-radius);
+  font-size: 1.6rem;
+}
+.form__send:active {
+  box-shadow: var(--box-shadow-inset);
+  color: var(--color-text-purple-active);
 }
 
-.form__message button .icon {
-  font-size: 2rem;
-}
-
-.form__message button:active {
-  box-shadow: 
-    var(--box-shadow), 
-    var(--box-shadow-inset);
-  color: rgb(57, 114, 95);
+.send-icon {
+  text-shadow: var(--box-shadow-inset);
 }
