change(client): changing the application routing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,6 +122,11 @@ input {
   border: none;
 }
 
+a {
+  color: var(--color-text-danger);
+  text-decoration: none;
+}
+
 /* Elementos personalizados */
 
 .divider {
