--- a/client/src/styles/chat/Box.css
+++ b/client/src/styles/chat/Box.css
@@ -1,5 +1,6 @@
 #chat-box {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +9,7 @@
 
 /* ====== Header of the chatbox */
 .box__header {
-  padding: 15px 0;
+  padding: 17px 0;
   width: 100%;
   display: flex;
   align-items: center;
@@ -53,7 +54,7 @@
 .messages {
   height: auto;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   align-items: flex-start;
 }
 
